--- a/App/current/templates/dm.html
+++ b/App/current/templates/dm.html
@@ -4,7 +4,6 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <head>
-    ...
     <style>
         /* 通用样式 */
         body {
@@ -34,7 +33,8 @@
 
         button {
             display: block;
-            width: 100%;
+            width: 100px;
+            height: 100px;
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -60,8 +60,14 @@
             }
         }
 
+        /* Grid Layout */
+        .form-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 20px;
+        }
+
     </style>
-    ...
 </head>
 <html>
     <head>
@@ -70,25 +76,26 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/App/current/templates/styles.css">
     </head>
     <body>
         <h1>Welcome, Dungeon Master!</h1>
-        <form action="{{ url_for('run_script') }}" method="post">
+        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Show Picture</button>
         </form>
-        <form action="{{ url_for('run_script') }}" method="post">
+        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Show Stats</button>
         </form>
-        <form action="{{ url_for('run_script') }}" method="post">
+        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Show Feature</button>
         </form>
-        <form action="{{ url_for('run_script') }}" method="post">
+        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Show Combat Tracker</button>
         </form>
-        <form action="{{ url_for('run_script') }}" method="post">
+        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Roll</button>
         </form>
+        <img src="/App/current/img/recap.png" alt="rando">
 
         
         <script src="" async defer></script>
