--- a/App/current/templates/dm.html
+++ b/App/current/templates/dm.html
@@ -74,7 +74,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/App/current/templates/styles.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
         <h1>Welcome, Dungeon Master!</h1>
@@ -93,7 +93,6 @@
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
             <button type="submit">Roll</button>
         </form>
-        <img src="/App/current/img/recap.png" alt="rando">
 
         
         <script src="" async defer></script>
