--- a/App/current/templates/menu.html
+++ b/App/current/templates/menu.html
@@ -74,7 +74,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/App/current/templates/styles.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
         <h1>Welcome! Select mode</h1>
