--- a/App/current/templates/dm.html
+++ b/App/current/templates/dm.html
@@ -79,6 +79,8 @@
     <body>
         <h1>Welcome, Dungeon Master!</h1>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+            <input name="type" type="hidden" value="image">
+            <input name="object_name" type="hidden" value="Aarakocra">
             <button type="submit">Show Picture</button>
         </form>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
