Changes with Modal
dm2.html is replacing dm.html. More less similar but has modals implemented that sends the required parameters

--- a/App/current/templates/dm.html
+++ b/App/current/templates/dm.html
@@ -84,15 +84,23 @@
             <button type="submit">Show Picture</button>
         </form>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+            <input name="type" type="hidden" value="image">
+            <input name="object_name" type="hidden" value="Aarakocra">
             <button type="submit">Show Stats</button>
         </form>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+            <input name="type" type="hidden" value="image">
+            <input name="object_name" type="hidden" value="Aarakocra">
             <button type="submit">Show Feature</button>
         </form>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+            <input name="type" type="hidden" value="image">
+            <input name="object_name" type="hidden" value="Aarakocra">
             <button type="submit">Show Combat Tracker</button>
         </form>
         <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+            <input name="type" type="hidden" value="image">
+            <input name="object_name" type="hidden" value="Aarakocra">
             <button type="submit">Roll</button>
         </form>
 
