--- a/App/current/templates/player.html
+++ b/App/current/templates/player.html
@@ -162,7 +162,7 @@
             </form>
         </div>
         
-        <button class="button" onclick="openModal('featModal')">Show Feature</button>
+        <button class="button" onclick="openModal('featModal')">Show Feat</button>
 
         <!-- Show Combat Tracker Form and Button -->
         <div id="combatModal" class="modal" style="display:none;">
