--- a/App/current/templates/dm.html
+++ b/App/current/templates/dm.html
@@ -27,16 +27,6 @@
             font-size: 2.8em;
         }
         
-        /* 表单和按钮样式 */
-        form {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-            margin-bottom: 20px;
-            max-width: 400px;
-            margin: 20px auto;
-        }
         
         button {
             display: block;
@@ -64,6 +54,31 @@
                 padding: 15px;
             }
         }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #333;
+            color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
+
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
         
     </style>
 </head>
@@ -78,33 +93,144 @@
     </head>
     <body>
         <h1>Welcome, Dungeon Master!</h1>
-        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
-            <input name="type" type="hidden" value="image">
-            <input name="object_name" type="hidden" value="Aarakocra">
-            <button type="submit">Show Picture</button>
-        </form>
-        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
-            <input name="type" type="hidden" value="image">
-            <input name="object_name" type="hidden" value="Aarakocra">
-            <button type="submit">Show Stats</button>
-        </form>
-        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
-            <input name="type" type="hidden" value="image">
-            <input name="object_name" type="hidden" value="Aarakocra">
-            <button type="submit">Show Feature</button>
-        </form>
-        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
-            <input name="type" type="hidden" value="image">
-            <input name="object_name" type="hidden" value="Aarakocra">
-            <button type="submit">Show Combat Tracker</button>
-        </form>
-        <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
-            <input name="type" type="hidden" value="image">
-            <input name="object_name" type="hidden" value="Aarakocra">
-            <button type="submit">Roll</button>
-        </form>
+    
+        <!-- Show Picture Modal -->
+        <div id="myModal1" class="modal">
+            <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Choose an option and enter the name of the image:</p>
+                <input name="type" type="hidden" value="image">
+                <input type="text" id="textInput1" name="object_name" placeholder="Enter text here">
+                <!-- 保持原有的下拉菜单 -->
+                <button type="submit">Submit</button>
+                <button type="button" onclick="closeModal('myModal1')">Close</button>
 
+            </form>
+        </div>
         
-        <script src="" async defer></script>
+        <div id="modalOverlay1" class="modal-overlay"></div>
+    
+        <button onclick="openModal('myModal1')">Show Picture</button>
+    
+        <!-- Show Class Feature Modal -->
+        <div id="featureModal" class="modal" style="display:none;">
+            <form id="featureForm" class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Select the type of feature and enter its name:</p>
+                <input name="type" type="hidden" value="feature">
+                <select name="class_name">
+                    <option value="barbarian">Barbarian</option>
+                    <option value="bard">Bard</option>
+                    <option value="cleric">Cleric</option>
+                    <option value="druid">Druid</option>
+                    <option value="fighter">Fighter</option>
+                    <option value="monk">Monk</option>
+                    <option value="paladin">Paladin</option>
+                    <option value="ranger">Ranger</option>
+                    <option value="rogue">Rogue</option>
+                    <option value="sorcerer">Sorcerer</option>
+                    <option value="warlock">Warlock</option>
+                    <option value="wizard">Wizard</option>
+                </select>
+                <input type="text" name="feature_name" placeholder="Feature Name">
+                <button type="submit">Submit</button>
+                <button type="button" onclick="closeModal('featureModal')">Close</button>
+            </form>
+        </div>
+        
+        <button class="button" onclick="openModal('featureModal')">Show Class Feature</button>
+
+        <!-- Show Spell Modal -->
+        <div id="spellModal" class="modal" style="display:none;">
+            <form id="spellForm" class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Select the type of spell and enter its name:</p>
+                <input name="type" type="hidden" value="spell">
+                <input type="text" name="feature_name" placeholder="Spell Name">
+                <button type="submit">Submit</button>
+                <button type="button" onclick="closeModal('spellModal')">Close</button>
+            </form>
+        </div>
+    
+        <button class="button" onclick="openModal('spellModal')">Show Spell Feature</button>
+
+        <!-- Show Feat Modal -->
+        <div id="featModal" class="modal" style="display:none;">
+            <form id="featForm" class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Select the type of feature and enter its name:</p>
+                <input name="type" type="hidden" value="feat">
+                <input type="text" name="feature_name" placeholder="Feat Name">
+                <button type="submit">Submit</button>
+                <button type="button" onclick="closeModal('featModal')">Close</button>
+            </form>
+        </div>
+        
+        <button class="button" onclick="openModal('featModal')">Show Feat</button>
+
+        <!-- Show Combat Tracker Form and Button -->
+        <div id="combatModal" class="modal" style="display:none;">
+            <form id="featureForm" class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Input name and value, then select action from the dropdown:</p>
+                <input name="type" type="hidden" value="combat">
+                <input type="text" name="creature_name" placeholder="Character Name">
+                <input type="text" name="misc_string" placeholder="New Value">
+                <select name="action">
+                    <option value="initiative">Initiative</option>
+                    <option value="hp">HP</option>
+                    <option value="condition">Condition</option>
+                    <option value="clear">Clear</option>
+                    <!-- Other types -->
+                </select>
+                <button type="submit">Submit</button>
+                <button type="button" onclick="closeModal('combatModal')">Close</button>
+            </form>
+        </div>
+        
+        <button class="button" onclick="openModal('combatModal')">Show Combat Tracker</button>
+
+
+        <!-- Roll Dice Modal -->
+        <div id="diceModal" class="modal" style="display:none;">
+            <form id="diceForm" class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <p>Enter dice count and type:</p>
+                <input type="number" name="dice_count" min="1" placeholder="Dice Count">
+                <input name="type" type="hidden" value="roll">
+                <select name="dice_type">
+                    <option value=4>d4</option>
+                    <option value=6>d6</option>
+                    <option value=8>d8</option>
+                    <option value=10>d10</option>
+                    <option value=20>d20</option>
+                    <option value=100>d100</option>
+                    <!-- Other dice types -->
+                </select>
+                <input type="number" name="modifier" placeholder="Modifier" value=0>
+                <button type="submit" class="button">Roll</button>
+                <button type="button" onclick="closeModal('diceModal')">Close</button>
+            </form>
+        </div>
+        <button class="button" onclick="openModal('diceModal')">Roll</button>
+
+        <!-- Modal HTML -->
+        <div id="exitmodal" class="modal">
+            <form class="form-grid" action="{{ url_for('run_script') }}" method="post">
+                <input name="type" type="hidden" value="exit">
+                <button onclick="closeAndSubmitModal('objectNameOptions1')">Submit</button>
+                <button type="button" onclick="closeModal('myModal1')">Close</button>
+            </form>
+        </div>
+        <div id="exitoverlay" class="modal-overlay"></div>
+        <button onclick="openModal('exitmodal')">Exit Squire</button>
+    
+        <!-- JavaScript to handle modals -->
+        <script>
+            function openModal(modalId) {
+                document.getElementById(modalId).style.display = 'block';
+                
+            }
+    
+            function closeModal(modalId) {
+                document.getElementById(modalId).style.display = 'none';
+            }
+        </script>
     </body>
+    
+    
 </html>
